--- a/wd/telegram/telegram.html
+++ b/wd/telegram/telegram.html
@@ -33,17 +33,20 @@
 				<option value="1">Australia</option>
 				<option value="2">USA</option>
 				<option value="3">Russia</option>
+				<hr>
 				</select></p></BR>
 				<div class="inputs">
 					<div class="code-inputs"><label>Code</label>
-						<input class="input1" placeholder="+7 7"></input><hr></div>
+						<input class="input1" value="+7 7" placeholder="+7 7"></input><hr></div>
 
 					<div class="number-inputs"><label></label>
-						<input class="input2" placeholder="Phone number"></input><hr></div>
+						<br><input class="input2" placeholder="Phone number"></input><hr></div>
 
 				</div>
 			</form>
 		</div>
+		<div class="footer">Welcome to the official Telegram web-client.
+			<p><br><a href="#">Learn more</a></p><br></div>
 	</div>
 		
 	</div>
