last changes of week3

--- a/wd/week3/ToDoList/index.html
+++ b/wd/week3/ToDoList/index.html
@@ -6,9 +6,9 @@
 
 	</head>
 	<body>
-        <header>
+        <nav>
            WELCOME TODOLIST
-        </header>
+        </nav>
         <section class="main">
             <p style='font-size: 35px;'>ToDo List</p>
             <input class="btns" type="text" placeholder="New Task">
@@ -16,6 +16,6 @@
             <ul class="list">       
             </ul>
         </section>
-        <script src="main.js"></script>
+        <script src="logic.js"></script>
     </body>
 </html>
